syntax = "proto3";

package services;

option java_multiple_files = true;
option java_package = "services";
option java_outer_classname = "UserServiceProtos";

service UserService {
    rpc getUser(UserRequest) returns (UserResponse) {}
}

// The request message containing the user's name.
message UserRequest {
    string name = 1;
}

// The response message containing the greetings
message UserResponse {
    string name = 1;
    string emailAddress = 2;
    bool active = 3;
    string country = 4;
}
